syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/silaselisha/coffee-api/pkg/pb";

message Order {
    string product_id = 1;
    int64  quantity = 2;
    double discount = 3;
}

message Bucket {
    string _id = 1;
    string user = 2;
    repeated Order products = 3;
    double total_amount = 4;
    double total_discount = 5;
    int32 status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}